--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-nlr-meme",
-  "description": "mirai草图插件的koishi版本",
-  "version": "1.1.0",
+  "description": "输入生草来获取一张草图",
+  "version": "1.1.1",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "homepage": "https://github.com/Apricityx/koishi-plugin-NLR-meme.git",
