--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koishi": "^4.16.4"
   },
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "sharp": "^0.33.5"
   }
 }
