--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   ],
   "peerDependencies": {
     "koishi": "^4.16.4"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2",
+    "sharp": "^0.33.5"
   }
 }
