--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-nlr-meme",
   "description": "输入生草来获取一张草图",
-  "version": "1.2.2",
+  "version": "1.3.1",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "homepage": "https://github.com/Apricityx/koishi-plugin-NLR-meme.git",
@@ -14,7 +14,6 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
   "contributors": [
     "Apricityx <apricityx@qq.com>"
   ],
@@ -27,7 +26,10 @@
     "koishi": "^4.16.4"
   },
   "dependencies": {
+    "@types/axios": "^0.14.4",
+    "axios": "^1.7.8",
     "node-fetch": "^3.3.2",
     "sharp": "^0.33.5"
-  }
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
